Pequenas mudanças no código.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,7 @@ endorsed.classpath=
 excludes=
 file.reference.json-20250517.jar=lib/json-20250517.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.json-20250517.jar}
 # Space-separated list of extra javac options
